# LLM_WebScraper

./: Full-Backend-Architecture-for-a-Web-Scraper_chatbot.md  LLM_Scraper_Architecture.tiff  README.md  git_sync.sh  pyproject.toml
src/: __init__.py
src/agents/: __init__.py  agents.py  captcha_solver.py  content_analyzer.py  orchestrator.py
src/api/: __init__.py  main.py
src/tools/: __init__.py  web_scraper.py
tests/: test_api.py  test_captcha_solver.py  test_content_analyzer.py  test_orchestrator.py  test_scraper.py
