[project]
name = "llm-webscraper"
version = "0.1.0"
description = "A multi-agent web scraper chatbot using CrewAI and DeepSeek-Vision"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.11.0",
    "crewai-tools>=0.0.6",
    "playwright>=1.42.0",
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "langchain-community>=0.0.27",
    "langchain-ollama>=0.0.1",
    "pydantic>=2.6.3",
    "requests>=2.31.0",
    "pytest>=8.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100 